fix notification circle alignment on mobile

--- a/ui/scss/component/_notification.scss
+++ b/ui/scss/component/_notification.scss
@@ -140,4 +140,9 @@
   border-radius: 50%;
   background-color: var(--color-primary);
   margin-left: var(--spacing-s);
+  margin-top: var(--spacing-s);
+
+  @media (min-width: $breakpoint-small) {
+    margin-top: 0;
+  }
 }
